--- a/src/views/home/sections/tracks/Tracks.module.scss
+++ b/src/views/home/sections/tracks/Tracks.module.scss
@@ -257,6 +257,10 @@
 
   .cta {
     align-self: flex-start;
+
+    @include mixins.mobile {
+      align-self: stretch;
+    }
   }
 }
 
